--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-         version="4.0">
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+             xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+		  http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+             version="2.5">
 
     <servlet>
         <servlet-name>resumeServlet</servlet-name>
@@ -23,4 +24,8 @@
         <url-pattern>/list</url-pattern>
     </servlet-mapping>
 
+    <welcome-file-list>
+        <welcome-file>/WEB-INF/jsp/list.jsp</welcome-file>
+    </welcome-file-list>
+    
 </web-app>
